# HADR

./: .gitattributes  .gitignore  README.md  authors.txt  config.ini  index.html  pyproject.toml  runtime.py
css/: code.css  index.css  latex.css  newsprint.css
data/: prompts.json  requirement_uuid_mapping.json  requirements.json  supplemental_uuid_mapping.json  test_uuid_mapping.json  tests.json
data-test/meta/: magentabook_meta.json
data-test/requirements/: requirements.csv
data/ccsds/: bluebook_meta.json
data/interim/: mock.json  requirement_uuid_mapping.json  supplemental_uuid_mapping.json  test_uuid_mapping.json
data/meta/: magentabook_meta.json
js/: overview.js  preview.js
misc/: supplemental_scrape.csv  supplemental_scrape.xls
notebooks/: artifact_summaries.ipynb  branch.ipynb  branch_summaries.ipynb  database.ipynb  entites.ipynb  extraction.ipynb  global.ipynb  global_relations.ipynb  leafs.ipynb  local_relations.ipynb  qdrant.ipynb  universal.ipynb  universal_relations.ipynb  update_memgraph.ipynb
scripts/: .pdf_to_image.py.swp  .tokens.py.swp  join_json.py  kg.py  pdf_extraction.py  pdf_failed_extract.py  pdf_to_image.py  pdf_util.py  requirement_uuid.py  scraper.py  scraper.sh  supplemental_uuid.py  tensorboardviz.py  test_uuid.py  tokens.py  uuid_file.py
tensorboard_viz/: README.md  main.py
tuutrag/: Blue_metadata.json  batches.py  branch.ipynb  constants.py  data.py  database.py  extraction.ipynb  get_pdf.sh  leafs.ipynb  memgraph.py  mock.json  prompt.py  qdrant.py  scrapers.py  types.py  update_memgraph.ipynb  utility.py  utils.py
(+44 files in other folders)
