[project]
name = "tuutrag-open"
version = "0.1.0"
description = "Teaching to Understand, Understanding to Teach: Retreival Augmented Generation for Requirements Traceability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "notebook>=7.4.7",
    "print-color>=0.4.6",
    "python-exports>=1.2.0",
    "sqlite-utils>=3.38",
]
